# file-mate

./: .gitignore  .pre-commit-config.yaml  .structure  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Plan.md  README.md  install.ps1  install.sh  pyproject.toml  setup.py
.github/workflows/: pypi-publish.yml
docs/: change-ext.md  rename.md
file_mate/: cli.py  requirements.txt
file_mate/tests/: test_converters.py  test_manipulators.py
scripts/: gen_docs.py  new_command.py
src/filemate/: __init__.py  cli.py
src/filemate/commands/: change_extension.py  file_group.py  rename.py
src/filemate/core/: change_extension.py  rename.py
src/filemate/utils/: ANSI_stripping.py  create_test_helpers.py  test_helpers.py  test_output_checker.py  validators.py
tests/: test_cli.py  test_core_change_extensions.py  test_core_rename.py
