[project]
name = "file-mate"
version = "0.0.1"
description = "A command-line tool for image, pdf, and other file manipulations."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Anshul Gada", email = "80207612+Anshulgada@users.noreply.github.com" },
]

requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "pydantic>=2.11.3",
    "rich>=14.0.0",
    "rich-click>=1.8.8",
]

[project.scripts]
filemate = "filemate.cli:cli"

[project.urls]
repository = "https://github.com/Anshulgada/file-mate"

# --- Standard location for optional dependencies (extras) ---
[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.11.6",
    "types-click>=7.1.8",
]

[tool.pytest.ini_options]
addopts = "-v -s --cov=filemate --cov-report=term --cov-report=html:htmlcov"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "rename: mark test as relating to the rename command",
    "change_ext: mark test as relating to the change-ext command",
]

[tool.coverage.run]
source = ["filemate"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/*", "pyproject.toml", "LICENSE", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["src/filemate"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true
